<resources>
    <string name="app_name">Shreddit</string>
    <string name="login_fragment_label">Login</string>
    <string name="register_fragment_label">Register</string>
    <string name="new_to_shreddit_text">New to Shreddit? Register.</string>
    <string name="already_a_user_text">Already a user? Login.</string>
    <string name="menu_home">Home</string>
    <string name="menu_subs">Subscriptions</string>
    <string name="menu_post">Post</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_notif">Notifications</string>
    <string name="post_bottom_sheet_title">Post to Shreddit</string>
    <string name="link_txt">Link</string>
    <string name="image_txt">Image</string>
    <string name="video_txt">Video</string>
    <string name="text_txt">Text</string>
</resources>