<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_marginBottom="2dp"
    android:background="@color/orange_500"
    android:id="@+id/post_bottom_sheet"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_bottom_sheet_title"
        android:gravity="center"
        android:padding="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/link_icon"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:onClick="openLinkPost"
                android:src="@drawable/ic_baseline_link_24" />

            <TextView
                android:id="@+id/link_lbl"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="openLinkPost"
                android:text="@string/link_txt" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_image_24"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/image_txt"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_videocam_24"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/video_txt"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_baseline_text_snippet_24"/>
            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/text_txt"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bottom_sheet_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_close_24"/>

</LinearLayout>